@@ -1,3 +1,9 @@
+2013-05-09  Borut Razem  <borutr@users.sourceforge.net>
+  * libgputils/gpmemory.c:
+    fixed bug #264 gpasm 1.1.0 core dumps using mixed CONFIG __CONFIG
+    word memory location is used if at least one byte is used
+  * include/stdhdr.h: updated copyright year
+
 2013-05-05  Borut Razem  <borutr@users.sourceforge.net>
   * man/gpasm.1.in, man/fr/gpasm.1.in, gpasm/gpasm.c, doc/gputils.lyx:
     fixed English typos, applied patch
